# internal/handlers/routes.go
@@ -11,7 +11,7 @@ import (
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func RegisterRoutes(r *gin.Engine, sessionSvc *services.SessionService) {
+func RegisterRoutes(r *gin.Engine, sessionSvc *services.SessionService, availabilitySvc *services.AvailabilityService) {
 	r.Use(cors.New(cors.Config{
 		AllowOrigins:     []string{"http://localhost:3005"},
 		AllowMethods:     []string{"GET", "POST", "PUT", "DELETE", "OPTIONS"},
@@ -27,12 +27,19 @@ func RegisterRoutes(r *gin.Engine, sessionSvc *services.SessionService) {
 	v1 := r.Group("/api/v1")
 	{
 		sh := &sessionHandler{service: sessionSvc}
+		ah := &availabilityHandler{service: availabilitySvc}
 		sessions := v1.Group("/sessions")
 		{
 			sessions.POST("", sh.Create)
 			sessions.GET("/:slug", sh.GetBySlug)
 			sessions.PUT("/:id", sh.Update)
 			sessions.DELETE("/:id", sh.Delete)
+		}
+		availability := v1.Group("/availability")
+		{
+			availability.POST("", ah.CreateAvailability)
+			availability.GET("/:slug", ah.GetAllAvailabilitiesForSlug)
+			availability.POST("/update", ah.UpdateAvailability)
 		}
 	}
 }
